updating cli link

--- a/development-with-llms.mdx
+++ b/development-with-llms.mdx
@@ -42,6 +42,6 @@ When working with an LLM to write Chalk code, you can reference the base prompt 
 3. Review generated code for adherence to your team's conventions
 4. Test the generated features in your development environment
 
-To reference the base prompt, you can copy and paste it into your LLM prompt config (ex. CLAUDE.md or .cursor/rules) or you can use the [chalk init agent-prompt](/cli?command=init_agent-prompt) command to add the prompt to your local repository.
+To reference the base prompt, you can copy and paste it into your LLM prompt config (ex. CLAUDE.md or .cursor/rules) or you can use the [chalk init agent-prompt](/cli/init_agent-prompt) command to add the prompt to your local repository.
 
 By using these specialized prompts, you can leverage AI assistance to write more consistent, idiomatic Chalk code while reducing development time and improving code quality.
