updating rbac doc with example (#409)

--- a/online-authentication.mdx
+++ b/online-authentication.mdx
@@ -121,6 +121,34 @@ will only be allowed to access data sources whose tags match your allowlist.
 
 ### Features
 
-For features, Chalk expects a blocklist of tags. Features that match these tags will be excluded from computation. We
+For features, Chalk expects a blocklist or allowlist of tags. Features that are not permissible will be excluded from computation. We
 make a distinction between features solely used to compute other features and features which are returned as query
-output. You can maintain separate blocklists for each of these types of features.
+output. You can maintain separate permissions for each of these types of features.
+
+### Examples
+
+If we created a service token blocking the tag `allow1`, then the following features with said tag would not be
+computable. If we ran a query with this service token fetching feature `feature1` with tag `allow1`, we would get an
+error back indicating that the feature was not accessible:
+
+Feature Definition:
+```python
+@features(tags=["generic"])
+class AllowedEvents:
+  id: int
+  feature1: str = feature(tags=["allow1"])
+```
+Query:
+```bash
+$ chalk query --in allowed_events.id=1 --out allowed_events.feature1
+
+Results:
+<query url>
+
+No scalar features
+
+Errors:
+Unauthorized allowed_events.feature1
+
+Feature 'allowed_events.feature1' is not authorized for this environment for tag allow1
+```
