approx_top_k example that returns a non-constant

--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -20,6 +20,7 @@ from chalk import DataFrame, Windowed, windowed
 class Transaction:
     id: int
     amount: float
+    category: str
     user_id: "User.id"
 
 @features
@@ -28,16 +29,15 @@ class User:
     transactions: DataFrame[Transaction]
     total_transaction_amount: Windowed[float] = windowed(
         "1d", "7d", "30d",
-        # materialize your features in a single line
         materialization={"bucket_duration": "1d"},
         expression=_.transactions[_.amount].sum(),
     )
     most_active_users: Windowed[list[int]] = windowed(
-        "1h",
+        "30d", "60d", "all",
         materialization={"bucket_duration": "1h"},
-        # the IDs of approximately the 10 users with the most activity in the past hour;
-        # k is required and must be passed in as a keyword argument
-        expression=_.transactions[_.user_id].approx_top_k(k=10)
+        # The approximate top 10 categories that the user has
+        # spent at in each of the windowed buckets.
+        expression=_.transactions[_.category].approx_top_k(k=10)
     )
 ```
 
